--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,41 @@
 <resources>
     <string name="app_name">CardWars</string>
+    <string name="title_activity_maps_fragment">Map</string>
+    <string name="manual_drawing">Manual Drawing</string>
+    <string name="auto_draw">Auto Draw</string>
+    <string name="player_points">%1$d</string>
+    <string name="card_counters">%1$d</string>
+    <string name="tap_to_winner_page">Tap to Winner Page</string>
+    <string name="url_image1">https://thumbs.dreamstime.com/z/first-place-winner-golden-label-32845141.jpg</string>
+    <string name="url_image2">https://cdn4.vectorstock.com/i/1000x1000/87/18/second-place-2-vector-1448718.jpg</string>
+    <string name="url_image3">https://cdn1.vectorstock.com/i/1000x1000/05/80/third-place-vector-1410580.jpg</string>
+    <string name="url_image4">https://cdn3.vectorstock.com/i/1000x1000/47/37/fourth-place-laurel-design-label-vector-7844737.jpg</string>
+    <string name="url_image5">https://cdn2.vectorstock.com/i/1000x1000/47/41/fifth-place-laurel-design-label-vector-7844741.jpg</string>
+    <string name="url_image6">https://cdn.impactinit.com/cdn/x/x@22198fd404/smss53/smsimg28/pv/ingimagecontributors/ing_60143_09835.jpg</string>
+    <string name="url_image7">https://cdn3.vectorstock.com/i/1000x1000/47/47/seventh-place-laurel-design-label-vector-7844747.jpg</string>
+    <string name="url_image8">https://cdn3.vectorstock.com/i/1000x1000/47/57/eighth-place-laurel-design-label-vector-7844757.jpg</string>
+    <string name="url_image9">https://cdn5.vectorstock.com/i/1000x1000/47/59/ninth-place-laurel-design-label-vector-7844759.jpg</string>
+    <string name="url_image10">https://usefulisrael.com/wp-content/uploads/2020/06/7446.jpg</string>
+    <string name="marker_msg">Marker at HighScorer Location</string>
+    <string name="heart">h</string>
+    <string name="diamond">d</string>
+    <string name="club">c</string>
+    <string name="spade">s</string>
+    <string name="winner_points">WINNER_POINTS</string>
+    <string name="winner_player">WINNER_PLAYER</string>
+    <string name="HIGHSCORE_KEY">HIGHSCORE</string>
+    <string name="TOP_TEN_KEY">WINNER_PLAYER</string>
+    <string name="LOCATION_DENY">LOCATION_DENY</string>
+    <string name="NA">NA</string>
+    <string name="emptyArray">[]</string>
+    <string name="winner_txt">%1$d Points!</string>
+    <string name="highscore_msg">New high score! please enter your name</string>
+    <string name="unknown_player">UNKNOWN</string>
+    <string name="save">Save</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="do_not_save">Don\'t Save</string>
+    <string name="GPS_error_toast_msg">GPS was not permitted, default location is applied</string>
+    <string name="msg_location_recommendation">Location services are highly recommended for a better game experience</string>
+    <string name="msg_location_recommendation_dont_show_again">Location services are highly recommended for a better game experience\nThis window will only be shown %1$d times."</string>
 </resources>
